* Dialer (ECCP): fix error message for hangup request when agent exists but is 
  not handling a call
* Dialer (ECCP): add required campaign ID when starting hold.
* Agent Console: fix behavior when no callback extensions exist.
* Agent Console: fix two javascript warnings in IE6.
* Agents, Callback Extensions: do not modify the audit or call tables from the
  module. Now that the dialer has exclusive responsibility over auditing on 
  logoff, modification of audit tables on forced disconnection, as allowed by
  these modules, is actually harmful.
* Dialer (ECCP): merge in-progress support for CallbackLogin-style agents.
  Currently the supported agents are SIP and IAX2 extensions. The agents must be
  declared at the Callback Extensions module under Call Center-->Agent Options,
  and also added as Dynamic Members of the queues to use for the campaigns, as
  S4321 (for extension SIP/4321) or I4321 (for extension IAX2/4321). The 
  extensions will be added with QueueAdd at login and will only ring if a call
  enters the corresponding queue.
* Dialer (ECCP): add and document call progress events. Rework call progress
  logging so that the campaign ID is available. Add a new request 'callprogress'
  to enable call progress events, which are disabled by default.
* Dialer: add logging capability of events that happen to a call. For this a 
  new database table was created. Allow campaign deletion to cope with the new
  table. This is required functionality for call progress events.
* Dialer: add new column calls.trunk to keep track of trunk used for outgoing
  call. Add outgoing trunk support to dialer code. This is required for planned
  functionality of trunk display of in-progress calls.
* Agent Console: use the new getchanvars request to add the list of channel
  variables to the ones available in an external URL. This allows variables set
  via custom contexts or AGIs to be used to drive external URLs.